// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForwardValue cannot be extended 1`] = `
"snippetCode.ts (4,13): 'MyForwardValue' is declared but never used.

      2 |       import { ForwardValue } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyForwardValue extends ForwardValue {
        |             ^
      5 |       }
      6 |     
"
`;

exports[`ForwardValue cannot be implemented 1`] = `
"snippetCode.ts (4,13): Class 'MyForwardValue' incorrectly implements interface 'ForwardValue'.
  Property 'asString' is missing in type 'MyForwardValue'.

      2 |       import { ForwardValue } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyForwardValue implements ForwardValue {
        |             ^
      5 |       }
      6 |     
"
`;
